Fixing samples, added 12_OpenCVRecognition, face recognition!

--- a/basic/12_OpenCVRecognition/opencv.cfg
+++ b/basic/12_OpenCVRecognition/opencv.cfg
@@ -207,7 +207,7 @@
         </PARAM>
         <PARAM name="recognition_mode" type="NUM" property="published" options="Face,Gpu Motion,Contour,Color,Motion Detection,Blobs,Threshold,Body,Face Recognition Memorize,Face Recognition Remember">
             <VAL>
-                <D type="NUM">0</D>
+                <D type="NUM">8</D>
             </VAL>
             <VAL>
                 <D type="NUM">1</D>
@@ -320,6 +320,36 @@
         <PARAM name="debug_on" type="NUM" property="published" options="Off,On,Full">
             <VAL>
                 <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="training_images_folder" type="TEXT" property="published">
+            <VAL>
+                <D type="TXT">train</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="saving_images_folder" type="TEXT" property="published">
+            <VAL>
+                <D type="TXT">save</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="saving_images_mode" type="NUM" property="published" options="Time,Still,Smile">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="saving_images_time" type="FUNCTION" property="published">
+            <VAL>
+                <D type="FUNCTION">4000</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="saving_images_size_width" type="FUNCTION" property="published">
+            <VAL>
+                <D type="FUNCTION">30</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="saving_images_size_height" type="FUNCTION" property="published">
+            <VAL>
+                <D type="FUNCTION">30</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
