--- a/samples/Tunel/mirrorg.cfg
+++ b/samples/Tunel/mirrorg.cfg
@@ -12,40 +12,40 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">0.991000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">0.991000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">0.991000</D>
-                <D type="FUNCTION">0.991000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">0.991000</D>
+                <D type="FUNCTION" code="GREEN">0.991000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.666667</D>
-                <D type="FUNCTION">0.666667</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">0.666667</D>
+                <D type="FUNCTION" code="BLUE">0.666667</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.984314</D>
-                <D type="FUNCTION">0.984314</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">0.984314</D>
+                <D type="FUNCTION" code="BLUE">0.984314</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">0</D>
-                <D type="FUNCTION">0</D>
-                <D type="FUNCTION">0</D>
-                <D type="FUNCTION">0.5</D>
+                <D type="FUNCTION" code="RED">0</D>
+                <D type="FUNCTION" code="GREEN">0</D>
+                <D type="FUNCTION" code="BLUE">0</D>
+                <D type="FUNCTION" code="ALPHA">0.5</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -123,6 +123,11 @@
         <PARAM name="script" type="SCRIPT">
             <VAL>
                 <D type="TXT"></D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
