--- a/samples/Tunel/moldeoapioscin.cfg
+++ b/samples/Tunel/moldeoapioscin.cfg
@@ -9,9 +9,7 @@
                 <D type="TXT">NUMERIC</D>
             </VAL>
         </PARAM>
-        <PARAM name="outlet" type="OUTLET">
-            <VAL />
-        </PARAM>
+        <PARAM name="outlet" type="OUTLET" />
         <PARAM name="script" type="SCRIPT">
             <VAL>
                 <D type="TXT"></D>
