--- a/samples/Tunel/tunel22.cfg
+++ b/samples/Tunel/tunel22.cfg
@@ -17,16 +17,16 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.384314</D>
-                <D type="FUNCTION">0.384314</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">0.384314</D>
+                <D type="FUNCTION" code="BLUE">0.384314</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -45,6 +45,144 @@
             </VAL>
             <VAL>
                 <D type="TXT">fondoNegroLineasBlancas.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
             </VAL>
             <VAL>
                 <D type="TXT">fondoNegroLineasBlancasRotada.png</D>
@@ -116,6 +254,262 @@
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="color">0</P>
+            <P name="texture">0</P>
+            <P name="wireframe">0</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">1</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">2</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">3</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">4</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">5</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">6</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">7</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">8</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">9</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">10</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">11</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">12</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">13</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">14</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">15</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">16</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">17</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">18</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">19</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">20</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">21</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">22</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">23</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">24</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">25</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">26</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">27</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">28</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">29</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">30</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">31</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">32</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">33</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">34</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">35</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">36</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">37</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">38</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">39</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">40</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">41</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">42</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">43</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">44</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">45</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">46</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">47</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">48</P>
+            <P name="wireframe">1</P>
+        </PRE>
+        <PRE>
+            <P name="color">1</P>
+            <P name="texture">49</P>
+            <P name="wireframe">1</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
