move with eyes and scale with eyebrow

--- a/Epoc/epocoscin.cfg
+++ b/Epoc/epocoscin.cfg
@@ -11,6 +11,24 @@
 				<D type="TXT">icon</D>
 				<D type="TXT">BLINK</D>
 			</VAL>
+			<VAL>
+				<D type="TXT">HORIEYE</D>
+				<D type="TXT">NUMERIC</D>
+				<D type="TXT">icon</D>
+				<D type="TXT">HORIEYE</D>
+			</VAL>
+			<VAL>
+				<D type="TXT">EYEBROW</D>
+				<D type="TXT">NUMERIC</D>
+				<D type="TXT">icon</D>
+				<D type="TXT">EYEBROW</D>
+			</VAL>
+			<VAL>
+				<D type="TXT">FURROW</D>
+				<D type="TXT">NUMERIC</D>
+				<D type="TXT">icon</D>
+				<D type="TXT">FURROW</D>
+			</VAL>
 		</PARAM>
         <PARAM name="script" type="SCRIPT">
             <VAL>
