--- a/Epoc/icon.cfg
+++ b/Epoc/icon.cfg
@@ -8,6 +8,10 @@
                 <D type="TXT">BLINK</D>
                 <D type="TXT">NUMERIC</D>
             </VAL>
+			<VAL>
+                <D type="TXT">HORIEYE</D>
+                <D type="TXT">NUMERIC</D>
+            </VAL>
         </PARAM>
         <PARAM name="outlet" type="OUTLET" />
         <PARAM name="script" type="SCRIPT">
@@ -66,7 +70,7 @@
         </PARAM>
         <PARAM name="translatex" type="TRANSLATEX">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">HORIEYE*0.5</D>
             </VAL>
         </PARAM>
         <PARAM name="translatey" type="TRANSLATEY">
@@ -81,12 +85,12 @@
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1.0+EYEBROW+FURROW</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1.0+EYEBROW+FURROW</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
