Added eyebrow and furrow for scale

--- a/Epoc/icon.cfg
+++ b/Epoc/icon.cfg
@@ -12,6 +12,14 @@
                 <D type="TXT">HORIEYE</D>
                 <D type="TXT">NUMERIC</D>
             </VAL>
+			<VAL>
+                <D type="TXT">EYEBROW</D>
+                <D type="TXT">NUMERIC</D>
+            </VAL>
+			<VAL>
+                <D type="TXT">FURROW</D>
+                <D type="TXT">NUMERIC</D>
+            </VAL>
         </PARAM>
         <PARAM name="outlet" type="OUTLET" />
         <PARAM name="script" type="SCRIPT">
@@ -85,12 +93,12 @@
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">1.0+EYEBROW+FURROW</D>
+                <D type="FUNCTION">1.0+EYEBROW-FURROW</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">1.0+EYEBROW+FURROW</D>
+                <D type="FUNCTION">scalex*1.0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
