--- a/ola/00_OlaTest/image.cfg
+++ b/ola/00_OlaTest/image.cfg
@@ -83,7 +83,30 @@
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
     <PRECONFIGS>
+        <PRE>
+            <P name="script">0</P>
+            <P name="alpha">0</P>
+            <P name="color">0</P>
+            <P name="syncro">0</P>
+            <P name="phase">0</P>
+            <P name="texture">0</P>
+            <P name="blending">0</P>
+            <P name="pos_text_x">0</P>
+            <P name="pos_text_y">0</P>
+            <P name="anc_text_x">0</P>
+            <P name="alt_text_y">0</P>
+            <P name="pos_cuad_x">0</P>
+            <P name="pos_cuad_y">0</P>
+            <P name="anc_cuad_x">0</P>
+            <P name="alt_cuad_y">0</P>
+            <P name="guides">0</P>
+        </PRE>
     </PRECONFIGS>
 </MOCONFIG>
