--- a/ola/00_OlaTest/ola.cfg
+++ b/ola/00_OlaTest/ola.cfg
@@ -21,22 +21,22 @@
                 <D type="INT">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="red" type="FUNCTION">
+        <PARAM name="red" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.1</D>
+                <D type="FUNCTION">sin(timeabs*0.00002*40)*(y==0)*(x&gt;=(220+40*cos(timeabs*0.00004)))*(x&lt;(221+40*cos(timeabs*0.00004)))</D>
             </VAL>
         </PARAM>
-        <PARAM name="green" type="FUNCTION">
+        <PARAM name="green" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0</D>
+                <D type="FUNCTION">red+0.0*(y==0)*(x&gt;=(221+40*cos(timeabs*0.0002)))*(x&lt;(222+40*cos(timeabs*0.0002)))</D>
             </VAL>
         </PARAM>
-        <PARAM name="blue" type="FUNCTION">
+        <PARAM name="blue" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">red+0.0*(y==0)*(x&gt;=(222+40*cos(timeabs*0.0002)))*(x&lt;(223+40*cos(timeabs*0.0002)))</D>
             </VAL>
         </PARAM>
-        <PARAM name="alpha" type="FUNCTION">
+        <PARAM name="alpha" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
@@ -71,6 +71,69 @@
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
+        <PARAM name="texture" type="TEXTURE">
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="texture">0</P>
+        </PRE>
+        <PRE>
+            <P name="texture">1</P>
+        </PRE>
+        <PRE>
+            <P name="texture">2</P>
+        </PRE>
+        <PRE>
+            <P name="texture">3</P>
+        </PRE>
+        <PRE>
+            <P name="texture">4</P>
+        </PRE>
+        <PRE>
+            <P name="texture">5</P>
+        </PRE>
+        <PRE>
+            <P name="texture">6</P>
+        </PRE>
+        <PRE>
+            <P name="texture">7</P>
+        </PRE>
+        <PRE>
+            <P name="texture">8</P>
+        </PRE>
+        <PRE>
+            <P name="texture">9</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
