Fixing shaders/Sobel.cfg dependence

--- a/samples/ParticlesInteractive/trackerklt128x128.cfg
+++ b/samples/ParticlesInteractive/trackerklt128x128.cfg
@@ -159,7 +159,10 @@
         <PARAM name="texture" type="TEXTURE">
             <VAL>
                 <D type="TXT">LIVEIN0</D>
-               
+                <D type="TXT">shaders/Sobel.cfg</D>
+                <D type="TXT">res:128x128</D>
+                <D type="TXT">live0track</D>
+                <D type="FLOAT">1.000000</D>
             </VAL>
         </PARAM>
         <PARAM name="borderx" type="NUM">
